--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.15.6",
     "graphql-tools": "^2.5.1",
     "morgan": "^1.9.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "require-text": "0.0.1"
   }
 }
