--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "graphql": "^0.11.7",
     "graphql-tools": "^2.5.1",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
