--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql-tools": "^2.5.1",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
-    "require-text": "0.0.1"
+    "require-text": "0.0.1",
+    "tumblr.js": "^1.1.1"
   }
 }
