--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^0.11.7",
     "graphql-tools": "^2.5.1",
     "morgan": "^1.9.0",
+    "node-fetch": "^1.7.3",
     "nodemon": "^1.12.1",
     "require-text": "0.0.1",
     "tumblr.js": "^1.1.1"
